Issue #18404: Fixed issue where in narrow screen views the content panel was not collapsing.

--- a/source/stylesheets/screen.css
+++ b/source/stylesheets/screen.css
@@ -232,6 +232,10 @@ body {
     display: block;
     margin: 0;
   }
+  .app-panels > * {
+    min-width: 100%;
+    max-width: 100%;
+  }
 }
 .xv-pullout-header {
   text-align: center;
